Ateracoes no css

--- a/index.html
+++ b/index.html
@@ -13,53 +13,56 @@
       <h1 id="titulo">Projeto: Lessons Learned | Trybe</h1>
     </header>
 
-    <img id="minha_foto" src="gilson.png" alt="foto de Gilson" />
+    <main id="principal">
+      <img id="minha_foto" src="gilson.png" alt="foto de Gilson" />
 
-    <div class="listas">
-      <ol id="licoes_aprendidas" class="lists">
-        <h2>Lições aprendidas</h2>
-        <li>Unix & Bash</li>
-        <li>Git & Github</li>
-        <li>Github Pages</li>
-        <li>CSS Inline & Externo</li>
-        <li>CSS Box Model</li>
-        <li>HTML</li>
-        <li>Html Semântico</li>
-        <li>Modelo cliente–servidor</li>
-        <li>Protocolo HTTP</li>
-        <li>Slack</li>
-      </ol>
-
-      <ul id="licoes_a_aprender" class="lists">
-        <h2>Lições a aprender</h2>
-        <li>Javascript</li>
-        <li>DOM</li>
-        <li>EVentos</li>
-        <li>Web Storage</li>
-        <li>Flexbox</li>
-        <li>CSS Responsivo</li>
-        <li>Testes Unitários</li>
-        <li>React</li>
-        <li>Metodologias Ágeis</li>
-        <li>Testes Automatizados</li>
-      </ul>
-    </div>
-
-    <article>
-      <h3>A estrada até aqui</h3>
-      <p>
-        Meu aprendizado na Trybe até esse primeiro projeto já tem sido bem
-        intenso, a curva de intensidade depois dos primeros dias é acentuada, e
-        isso me anima muito, pois só confirma que vamos realmente aprender muito
-        aqui. E mais do que aprender a desenvolver, estou aprendendo que posso
-        sim desenvolver minhas soft skills e a grande importância delas para o
-        mercado.
-      </p>
-    </article>
+      <div class="listas">
+        <ol id="licoes_aprendidas" class="lists">
+          <h2>Lições aprendidas</h2>
+          <li>Unix & Bash</li>
+          <li>Git & Github</li>
+          <li>Github Pages</li>
+          <li>CSS Inline & Externo</li>
+          <li>CSS Box Model</li>
+          <li>HTML</li>
+          <li>Html Semântico</li>
+          <li>Modelo cliente–servidor</li>
+          <li>Protocolo HTTP</li>
+          <li>Slack</li>
+        </ol>
+  
+        <ul id="licoes_a_aprender" class="lists">
+          <h2>Lições a aprender</h2>
+          <li>Javascript</li>
+          <li>DOM</li>
+          <li>EVentos</li>
+          <li>Web Storage</li>
+          <li>Flexbox</li>
+          <li>CSS Responsivo</li>
+          <li>Testes Unitários</li>
+          <li>React</li>
+          <li>Metodologias Ágeis</li>
+          <li>Testes Automatizados</li>
+        </ul>
+      </div>
+  
+      <article id="aprendizado">
+        <h3>A estrada até aqui</h3>
+        <p>
+          Meu aprendizado na Trybe até esse primeiro projeto já tem sido bem
+          intenso, a curva de intensidade depois dos primeros dias é acentuada, e
+          isso me anima muito, pois só confirma que vamos realmente aprender muito
+          aqui. E mais do que aprender a desenvolver, estou aprendendo que posso
+          sim desenvolver minhas soft skills e a grande importância delas para o
+          mercado.
+        </p>
+      </article>
+    </main>
 
     <section id="passagem">
       <aside>
         <p>
+          <h3>CSS</h3>
           Eu tinha um certo bloqueio com CSS, e quando o bloco 3 começou já fiquei
           ansioso. Mas logo percebi que era só um preconceito que adiquiri ao
           estudar de forma ineficiente no passado.
