--- a/index.html
+++ b/index.html
@@ -11,9 +11,12 @@
   <body>
     <header id="cabecalho">
       <h1 id="titulo">Projeto: Lessons Learned | Trybe</h1>
+      <nav>
+        <a href="#licoes_aprendidas">Lições</a>
+        <a href="#aprendizado">Artigo</a>
+      </nav>
     </header>
 
-    <main id="principal">
       <img id="minha_foto" src="gilson.png" alt="foto de Gilson" />
 
       <div class="listas">
@@ -46,7 +49,7 @@
         </ul>
       </div>
   
-      <article id="aprendizado">
+      <article id="aprendizado" class="lado-esquerdo">
         <h3>A estrada até aqui</h3>
         <p>
           Meu aprendizado na Trybe até esse primeiro projeto já tem sido bem
@@ -57,9 +60,8 @@
           mercado.
         </p>
       </article>
-    </main>
 
-    <section id="passagem">
+    <section id="passagem" class="lado-direito">
       <aside>
         <p>
           <h3>CSS</h3>
