ainda arrumando o HTML

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
         <div class="navegar" >
             <h4>
                 <a class="bot-nav" href="">QUEM SOU EU.</a>
-                <a class="bot-nav" href="">APRENDIZADO.</a>
+                <a class="bot-nav" href="">APRENDIZADOS.</a>
                 <a class="bot-nav" href="">CONTEUDOS FUTUROS.</a>
                 <a class="bot-nav" href="">CONTATOS.</a>
                 <a class="bot-nav" href="">CADASTRE-SE.</a>
@@ -63,9 +63,22 @@
         <section class="modulos">
             
             <div>
+                <!--artigo sobre seu aprendizado-->
+                <div>
+                    <h3>Experiencia no curso.</h3>
+                    <p>
+
+                    </p>
                 
+                <!--seção que conta uma passagem sobre seu aprendizado-->
+                    <p>
+
+                    </p>
+
+                </div>
+
                 <div class="licoes_aprendidas">
-                    <h3>APRENDIZADO.</h3>
+                    <h3>APRENDIZADOS.</h3>
                     <a class="licoes_aprendidas" href="https://pt.wikipedia.org/wiki/Unix"target="_bank">
                         <li>Unix.</li></a>  
                     <a class="licoes_aprendidas" href="https://blog.betrybe.com/git/" target="_bank">
