finaliza cumprindo todos os requisitos

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     </div>
   </header>
   <img src="foto.jpg" alt="Foto do Lucas" id="minha_foto">
-  <div>
+  <div id="div0">
     <div class="lado-esquerdo">
       <section>
         <p>
