Melhorando algumas coisa

--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
     </ul>
     </section>
     <article>
-        <h2 class="aprendizado">Aprendizado</h2>
+        <h2 class="aprendizado">2 - Aprendizado</h2>
         <p>Na trybe eu estou tendo uma experiência unica de aprendizado<br>
         aumentando meu conhecimento em desenvolvimento na web e como <br>
         desenvolvedor visando futuramente ter uma melhor carreira e ser<br>
@@ -56,13 +56,13 @@
         na qual eu estou trabalhando naquela empresa.</p>
     </article>
     <aside>
-        <h2 class="aprendizado">2 -Um Momento que ocorreu durante meu aprendizado</h2>
+        <h2 class="aprendizado">3 - Um Momento que ocorreu durante meu aprendizado</h2>
         <p>Os momentos de softskills melhoram bastante a interação entre os alunos<br>
         e um dos momentos que mais me impactou foi o de simpatia e empatia que trouxe <br>
         a diferença dos dois.</p>
     </aside>
     <div>
-    <h2 class="aprendizado">3 - Périodo de aprendizado do curso</h2>
+    <h2 class="aprendizado">4 - Périodo de aprendizado do curso</h2>
     <table>
         <tr>
             <th>inicio</th>
