adicionado algumas coisas

--- a/index.html
+++ b/index.html
@@ -47,8 +47,8 @@
     </ul>
     </section>
     <article>
-        <h2 class="aprendizado">2 - Aprendizado</h2>
-        <p>Na trybe eu estou tendo uma experiência unica de aprendizado<br>
+        <h2 class="lado_esquerdo">2 - Aprendizado</h2>
+        <p class="lado_esquerdo">Na trybe eu estou tendo uma experiência unica de aprendizado<br>
         aumentando meu conhecimento em desenvolvimento na web e como <br>
         desenvolvedor visando futuramente ter uma melhor carreira e ser<br>
         capacitado a fazer o que for pedido no meu emprego e podendo ir além<br>
@@ -56,8 +56,8 @@
         na qual eu estou trabalhando naquela empresa.</p>
     </article>
     <aside>
-        <h2 class="aprendizado">3 - Um Momento que ocorreu durante meu aprendizado</h2>
-        <p>Os momentos de softskills melhoram bastante a interação entre os alunos<br>
+        <h2 class="lado_direito">3 - Um Momento que ocorreu durante meu aprendizado</h2>
+        <p class="lado_direito">Os momentos de softskills melhoram bastante a interação entre os alunos<br>
         e um dos momentos que mais me impactou foi o de simpatia e empatia que trouxe <br>
         a diferença dos dois.</p>
     </aside>
