--- a/index.html
+++ b/index.html
@@ -28,6 +28,18 @@
         <img id="minha_foto" src="Images/WSE.jpg" alt="André Melo no jardim da escola de idiomas WSE em Wimbledon/London-UK">
     </figure>
 
+    <table class="table-style">
+      <tr>
+        <td>ANDRÉ MELO, 36 ANOS</td>
+      </tr>
+      <tr>
+        <td>ESTUDANTE DE DESENVOLVIMENTO WEB | TRYBE</td>
+      </tr>
+      <tr>
+        <td>COTIA - SP, BRAZIL</td>
+      </tr>
+    </table>
+
     <section class="lado-esquerdo">
       <h2> Lições Aprendidas</h2>
       <ol id="licoes_aprendidas">
