test - change - aside

--- a/index.html
+++ b/index.html
@@ -32,57 +32,64 @@
                 </p>
             </article>
         </section>
-        <section class="aside-section">
-            <aside class="aside-txt">
-                <p class="lado-direito">
-                    Pouco tempo se passou e a sensação é de evolução, não só em termos técnicos, evolução
-                    pessoal(autoconhecimento), refletir não só sobre si, mas tentar entender o outro. Nesse pouco
-                    tempo
-                    aprendi muito mais do que parte técnica, relacionada a programação, mas também a me auto
-                    programar.
-                </p>
-            </aside>
-        </section>
+        <aside class="aside-txt aside-section">
+            <p class="lado-direito">
+                Pouco tempo se passou e a sensação é de evolução, não só em termos técnicos, evolução
+                pessoal(autoconhecimento), refletir não só sobre si, mas tentar entender o outro. Nesse pouco
+                tempo
+                aprendi muito mais do que parte técnica, relacionada a programação, mas também a me auto
+                programar.
+            </p>
+        </aside>
         <section class="second-section">
             <div class="lessons">
                 <h1>Lições</h1>
             </div>
             <div class="list">
                 <ol id="licoes_aprendidas">
-                    <nav>
-                        <li><a href="https://www.youtube.com/watch?v=QuZVSz0McrI" target="_blank">Soft Skills -
-                                Empatia</a></li>
-                        <li><a href="https://git-scm.com/" target="_blank">Git</a></li>
-                        <li><a href="https://github.com/" target="_blank">Github</a></li>
-                        <li><a href="https://developer.mozilla.org/pt-BR/docs/Web/HTML" target="_blank">HTML</a>
-                        </li>
-                        <li><a href="https://developer.mozilla.org/pt-BR/docs/Web/CSS" target="_blank">CSS</a></li>
-                        <li><a href="https://developer.mozilla.org/pt-BR/docs/Web/JavaScript"
-                                target="_blank">Javascript</a></li>
-                        <li><a href="https://nodejs.org/en/" target="_blank">Node</a></li>
-                        <li><a href="https://diolinux.com.br/sistemas-operacionais/principais-comandos-do-linux-saiba-o.html"
-                                target="_blank">Shell Script</a>
-                        </li>
-                        <li><a href="https://explore.zoom.us/pt/products/zoom-phone/features/" target="_blank">Zoom</a>
-                        </li>
-                        <li><a href="https://slack.com/intl/pt-br/" target="_blank">Slack</a></li>
-                    </nav>
+                    <li class="aprendidas"><a href="https://www.youtube.com/watch?v=QuZVSz0McrI" target="_blank">Soft
+                            Skills -
+                            Empatia</a></li>
+                    <li class="aprendidas"><a href="https://git-scm.com/" target="_blank">Git</a></li>
+                    <li class="aprendidas"><a href="https://github.com/" target="_blank">Github</a></li>
+                    <li class="aprendidas"><a href="https://developer.mozilla.org/pt-BR/docs/Web/HTML"
+                            target="_blank">HTML</a>
+                    </li>
+                    <li class="aprendidas"><a href="https://developer.mozilla.org/pt-BR/docs/Web/CSS"
+                            target="_blank">CSS</a></li>
+                    <li class="aprendidas"><a href="https://developer.mozilla.org/pt-BR/docs/Web/JavaScript"
+                            target="_blank">Javascript</a></li>
+                    <li class="aprendidas"><a href="https://nodejs.org/en/" target="_blank">Node</a></li>
+                    <li class="aprendidas"><a
+                            href="https://diolinux.com.br/sistemas-operacionais/principais-comandos-do-linux-saiba-o.html"
+                            target="_blank">Shell Script</a>
+                    </li>
+                    <li class="aprendidas"><a href="https://explore.zoom.us/pt/products/zoom-phone/features/"
+                            target="_blank">Zoom</a>
+                    </li>
+                    <li class="aprendidas"><a href="https://slack.com/intl/pt-br/" target="_blank">Slack</a></li>
                 </ol>
                 <ul id="licoes_a_aprender">
-                    <li><a href="https://www.w3schools.com/css/css_rwd_intro.asp" target="_blank">CSS Responsive</a>
+                    <li class="a_aprender"><a href="https://www.w3schools.com/css/css_rwd_intro.asp" target="_blank">CSS
+                            Responsive</a>
                     </li>
-                    <li><a href="https://www.w3schools.com/js/js_es6.asp" target="_blank">ES6</a></li>
-                    <li><a href="https://pt-br.reactjs.org/" target="_blank">React</a></li>
-                    <li><a href="https://blog.betrybe.com/linguagem-de-programacao/sql/" target="_blank">SQL</a>
+                    <li class="a_aprender"><a href="https://www.w3schools.com/js/js_es6.asp" target="_blank">ES6</a>
                     </li>
-                    <li><a href="https://www.mysql.com/" target="_blank">MySQL</a></li>
-                    <li><a href="https://www.mongodb.com/cloud/atlas/lp/try2-hterms?utm_content=controlhterms&utm_source=google&utm_campaign=gs_americas_brazil_search_core_brand_atlas_desktop&utm_term=mongodb&utm_medium=cpc_paid_search&utm_ad=e&utm_ad_campaign_id=12212624308&gclid=Cj0KCQjwsZKJBhC0ARIsAJ96n3WmL0aucEirODclcheX93PgdZqkrhRYo31r-TXjNaVMoYacHdvm654aAplhEALw_wcB"
+                    <li class="a_aprender"><a href="https://pt-br.reactjs.org/" target="_blank">React</a></li>
+                    <li class="a_aprender"><a href="https://blog.betrybe.com/linguagem-de-programacao/sql/"
+                            target="_blank">SQL</a>
+                    </li>
+                    <li class="a_aprender"><a href="https://www.mysql.com/" target="_blank">MySQL</a></li>
+                    <li class="a_aprender"><a
+                            href="https://www.mongodb.com/cloud/atlas/lp/try2-hterms?utm_content=controlhterms&utm_source=google&utm_campaign=gs_americas_brazil_search_core_brand_atlas_desktop&utm_term=mongodb&utm_medium=cpc_paid_search&utm_ad=e&utm_ad_campaign_id=12212624308&gclid=Cj0KCQjwsZKJBhC0ARIsAJ96n3WmL0aucEirODclcheX93PgdZqkrhRYo31r-TXjNaVMoYacHdvm654aAplhEALw_wcB"
                             target="_blank">MongoDB</a>
                     </li>
-                    <li><a href="https://en.wikipedia.org/wiki/Unit_testing" target="_blank">Unit Test</a></li>
-                    <li><a href="https://www.w3schools.com/js/js_htmldom.asp" target="_blank">DOM</a></li>
-                    <li><a href="https://pt.wikipedia.org/wiki/NoSQL" target="_blank">NoSQL</a></li>
-                    <li><a href="https://www.python.org/" target="_blank">Python</a></li>
+                    <li class="a_aprender"><a href="https://en.wikipedia.org/wiki/Unit_testing" target="_blank">Unit
+                            Test</a></li>
+                    <li class="a_aprender"><a href="https://www.w3schools.com/js/js_htmldom.asp" target="_blank">DOM</a>
+                    </li>
+                    <li class="a_aprender"><a href="https://pt.wikipedia.org/wiki/NoSQL" target="_blank">NoSQL</a></li>
+                    <li class="a_aprender"><a href="https://www.python.org/" target="_blank">Python</a></li>
                 </ul>
             </div>
         </section>
