--- a/index.html
+++ b/index.html
@@ -36,9 +36,7 @@
             <aside class="aside-txt">
                 <p class="lado-direito">
                     Pouco tempo se passou e a sensação é de evolução, não só em termos técnicos, evolução
-                    pessoal(autoconhecimento), refletir não só sobre si, mas tentar entender o outro. Nesse pouco
-                    tempo
-                    aprendi muito mais do que parte técnica.
+                    pessoal(autoconhecimento), refletir não só sobre si, mas tentar entender o outro.
                 </p>
             </aside>
         </section>
