--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <section>
         <img id="minha_foto" src="minhafoto.png" alt="minha foto">
         <h2>Lista de lições aprendidas:</h2>
-        <ol id="licoes_aprendidas">
+        <ol class="lado-esquerdo" id="licoes_aprendidas">
             <li>Unix</li>
             <li>Bash</li>
             <li>comandos no terminal</li>
@@ -28,7 +28,7 @@
             <li>CSS</li>
         </ol>
         <h2>Lista de lições que ainda desejo aprender:</h2>
-        <ul id="licoes_a_aprender">
+        <ul class="lado-direito" id="licoes_a_aprender">
             <li>JavaScript</li>
             <li>Flexbox</li>
             <li>FrameWork</li>
@@ -39,6 +39,18 @@
             <li>Banco de dados (normalização e modelagem)</li>
             <li>Pyton</li>
             <li>Node JS</li>
+        </section>
+        <section>
+            <table class="table">
+                <tr>
+                  <td><b>graduação:</b></td>
+                  <td>Física-UFF (bacharelado)</td>
+                </tr>
+                <tr>
+                  <td><b>Pós-graduação:</b></td>
+                  <td>Física-UFF (Nuclear Aplicada)</td>
+                </tr>
+            </table>
         </section>
         </ul>
         <article>
