Inclusao e edicao de nova image

--- a/index.html
+++ b/index.html
@@ -21,11 +21,11 @@
 
   <main>
     <nav id="social-icons">
-        <a href="https://github.com/Andre-S-Melo" target="_blank">GitHub</a>
+        <a href="https://www.linkedin.com/in/adr-smelo/" target="_blank">in</a>
     </nav>
 
     <figure>
-        <img id="minha_foto" src="Images/WSE.jpg" alt="André Melo no jardim da escola de idiomas WSE em Wimbledon/London-UK">
+        <img id="minha_foto" src="Images/My-Brain.png" alt="Meu avatar gerado pelo aplicativo Bitmoji">
     </figure>
 
     <table class="table-style">
