--- a/index.html
+++ b/index.html
@@ -42,6 +42,12 @@
 
     </ul>
   </article>
-  <footer id="rodape">2021</footer>
+  <section id="linksExternos">
+    Contato:<a href="https://www.linkedin.com/in/amandasottani/"target = "_blark"> linkedin.com/amandasottani</a><br>Interessado na Trybe? <a href="https://www.betrybe.com/"target = "_blark">Clique aqui</a>
+  </section>
+  <footer id="rodape">
+    <p>2021|Todos os direitos reservado à Amanda Sottani Nascimento 
+    </p>
+  </footer>
 
 </body>
