Buttom adde + stylized

--- a/index.html
+++ b/index.html
@@ -29,7 +29,9 @@
                     src="fotoperfil.jpg" 
                     alt="foto homem gato e sorridente" >
                 </a>
-                <a id="linkedin" href="https://www.linkedin.com/in/ronny-velardez-12270021a/" target="_blank"> visite o meu perfil</a>
+                <a id="linkedin" href="https://www.linkedin.com/in/ronny-velardez-12270021a/" target="_blank"><div class="buttom"> Visit my profile </div>
+                </a>
+                               
         
             <div class="div-1">
                     <h2>Lições aparendidas</h2>
