--- a/index.html
+++ b/index.html
@@ -13,8 +13,11 @@
   </header> 
 
   <img id="minha_foto" src="WhatsApp Image 2021-08-16 at 14.15.36.jpeg" alt="A foto mostra a Amanda no template da Trybe">
-
-  <article id="listas">
+ 
+  <article id="artigo">Eis aqui meu primeiro projeto! Estes são meus primeiros passos em HTML e CSS. A Trybe me ensinou as tags a serem utilizadas e me apresentou -fascinou- com as infinitas possibilidades que o CSS nos oferece para criar! Me ensinou conceitos teóricos e até mesmo sobre internet! Mas, principalmente, a Trybe me ensinou a aprender,  e me ensinou também que existem empresas que genuinamente respeitam e se importam com seus clientes e funcionários! Dessa forma a Trybe abriu meus olhos e me mostrou não só o tipo de profissional que pretendo ser, mas também o tipo de empresa em que pretendo 
+  colaborar!  </article>
+  
+  <section id="listas">
    <ol id="licoes_aprendidas"> <h3 id="aprendi">Já aprendi:</h3>
       <li>Conceitos teóricos iniciais de Unix & Shell;</li>
       <li>Conceitos teóricos iniciais de Unix & Bash;</li>
@@ -41,7 +44,7 @@
       <li>Soft Skills;</li>
 
     </ul>
-  </article>
+  </section>
   <section id="linksExternos">
     Contato:<a href="https://www.linkedin.com/in/amandasottani/"target = "_blark"> linkedin.com/amandasottani</a><br>Interessado na Trybe? <a href="https://www.betrybe.com/"target = "_blark">Clique aqui</a>
   </section>
