Altera e estiliza a imagem, estiliza o botao e centraliza a secao

--- a/index.html
+++ b/index.html
@@ -14,11 +14,11 @@
       <h1 id="titulo">Lições aprendidas na <span class="trybe-green">Trybe</span></h1>
     </header>
     <main>
-      <section>
-        <h2>Eu, Natã!</h2>
+      <section id="presentation">
+        <h2>Oi, eu sou o Natã!</h2>
         <img src="me.jpeg" alt="Eu, Natã, com uma blusa azul e uma parede laranja ao fundo" id="minha_foto">
         <nav>
-          <a href="https://linkedin.com/in/nataelienai" target="_blank">LinkedIn: Natã Elienai</a>
+          <a href="https://linkedin.com/in/nataelienai" target="_blank" class="button">LinkedIn</a>
         </nav>
       </section>
       <section>
