--- a/index.html
+++ b/index.html
@@ -9,42 +9,44 @@
 
 <body>
   <header id="cabecalho">
-   <h1 id="titulo">/home/amanda/o-que-aprendi-em/ <br> Duas semanas como Tryber!!! </h1>
+   <h1 id="titulo">/home/amanda/o-que-aprendi-em/Duas semanas como Tryber!!! </h1>
   </header> 
 
   <img id="minha_foto" src="WhatsApp Image 2021-08-16 at 14.15.36.jpeg" alt="A foto mostra a Amanda no template da Trybe">
+  <section id=estrutura_central>
+   <section >
+     <article id="artigo">Eis aqui meu primeiro projeto! Estes são meus primeiros passos em HTML e CSS. A Trybe me ensinou as tags a serem utilizadas e me apresentou -fascinou- com as infinitas possibilidades que o CSS nos oferece para criar! Me ensinou conceitos teóricos e até mesmo sobre internet! Mas, principalmente, a Trybe me ensinou a aprender,  e me ensinou também que existem empresas que genuinamente respeitam e se importam com seus clientes e funcionários! Dessa forma a Trybe abriu meus olhos e me mostrou não só o tipo de profissional que pretendo ser, mas também o tipo de empresa em que pretendo colaborar!</article>
  
-  <article id="artigo">Eis aqui meu primeiro projeto! Estes são meus primeiros passos em HTML e CSS. A Trybe me ensinou as tags a serem utilizadas e me apresentou -fascinou- com as infinitas possibilidades que o CSS nos oferece para criar! Me ensinou conceitos teóricos e até mesmo sobre internet! Mas, principalmente, a Trybe me ensinou a aprender,  e me ensinou também que existem empresas que genuinamente respeitam e se importam com seus clientes e funcionários! Dessa forma a Trybe abriu meus olhos e me mostrou não só o tipo de profissional que pretendo ser, mas também o tipo de empresa em que pretendo 
-  colaborar!  </article>
-  
-  <section id="listas">
-   <ol id="licoes_aprendidas"> <h3 id="aprendi">Já aprendi:</h3>
-      <li>Conceitos teóricos iniciais de Unix & Shell;</li>
-      <li>Conceitos teóricos iniciais de Unix & Bash;</li>
-      <li>Git & GitHub - teoria e pratica; </li>
-      <li>Funcionamento da internet;</li>
-      <li>Linguagem de marcação HTML;</li>
-      <li>Tags, links internos e externos-HTML;</li>
-      <li>Linguagem CSS;</li>
-      <li>Inline,Block,Inline-block e Box Model - CSS;</li>
-      <li>Seletores e posicionamento - HTML & CSS;</li>
-      <li>HTML Semântico;</li>
-    </ol>
+    
+     <ol id="licoes_aprendidas"> <h3 id="aprendi">Já aprendi:</h3>
+       <li>Conceitos teóricos iniciais de Unix & Shell;</li>
+       <li>Conceitos teóricos iniciais de Unix & Bash;</li>
+       <li>Git & GitHub - teoria e pratica; </li>
+       <li>Funcionamento da internet;</li>
+       <li>Linguagem de marcação HTML;</li>
+       <li>Tags, links internos e externos-HTML;</li>
+       <li>Linguagem CSS;</li>
+       <li>Inline,Block,Inline-block e Box Model - CSS;</li>
+       <li>Seletores e posicionamento - HTML & CSS;</li>
+       <li>HTML Semântico;</li>
+      </ol>
 
-    <ul id="licoes_a_aprender"><h3>Quero aprender:</h3>
-      <li>JavaScript;</li>
-      <li>Forms, Flexbox e Responsivo - HTML e CSS;</li>
-      <li>React;</li>
-      <li>Metodologias Ágeis;</li>
-      <li>Redux;</li>
-      <li>SQL;</li>
-      <li>Normalização e Modelagem de Bando de Dados; </li>
-      <li>Arquitetura: SOLID e ORM;</li>
-      <li>Python;</li>
-      <li>Soft Skills;</li>
-
-    </ul>
+      <ul id="licoes_a_aprender"><h3>Quero aprender:</h3>
+       <li>JavaScript;</li>
+       <li>Forms, Flexbox e Responsivo - HTML e CSS;</li>
+       <li>React;</li>
+       <li>Metodologias Ágeis;</li>
+       <li>Redux;</li>
+       <li>SQL;</li>
+       <li>Normalização e Modelagem de Bando de Dados; </li>
+       <li>Arquitetura: SOLID e ORM;</li>
+       <li>Python;</li>
+       <li>Soft Skills;</li>
+      </ul>
+    </section>
+   <aside = id="aside" >"Constantemente a Trybe nos desafia à conversar com outros alunos que não conhecemos sobre temas variados da nossa vida, eu que sou muito tímida, sempre fico nervosa com esses momentos, mas no final acaba sendo muito divertido e especial! Esses momentos me trouxeram muitas rizadas e amizades!"</aside>
   </section>
+
   <section id="linksExternos">
     Contato:<a href="https://www.linkedin.com/in/amandasottani/"target = "_blark"> linkedin.com/amandasottani</a><br>Interessado na Trybe? <a href="https://www.betrybe.com/"target = "_blark">Clique aqui</a>
   </section>
