adicionei uma tag <nav></nav> para melhorar a semantica e ficar de acordo com o item dez

--- a/index.html
+++ b/index.html
@@ -47,9 +47,9 @@
    <aside = id="aside" >"Constantemente a Trybe nos desafia à conversar com outros alunos que não conhecemos sobre temas variados da nossa vida, eu que sou muito tímida, sempre fico nervosa com esses momentos, mas no final acaba sendo muito divertido e especial! Esses momentos me trouxeram muitas rizadas e amizades!"</aside>
   </section>
 
-  <section id="linksExternos">
+  <nav id="linksExternos">
     Contato:<a href="https://www.linkedin.com/in/amandasottani/"target = "_blark"> linkedin.com/amandasottani</a><br>Interessado na Trybe? <a href="https://www.betrybe.com/"target = "_blark">Clique aqui</a>
-  </section>
+  </nav>
   <footer id="rodape">
     <p>2021|Todos os direitos reservado à Amanda Sottani Nascimento 
     </p>
