adicionei as classes

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   </header> 
 
   <img id="minha_foto" src="WhatsApp Image 2021-08-16 at 14.15.36.jpeg" alt="A foto mostra a Amanda no template da Trybe">
-  <section id=estrutura_central>
+  <section class="lado-direito">
    <section >
      <article id="artigo">Eis aqui meu primeiro projeto! Estes são meus primeiros passos em HTML e CSS. A Trybe me ensinou as tags a serem utilizadas e me apresentou -fascinou- com as infinitas possibilidades que o CSS nos oferece para criar! Me ensinou conceitos teóricos e até mesmo sobre internet! Mas, principalmente, a Trybe me ensinou a aprender,  e me ensinou também que existem empresas que genuinamente respeitam e se importam com seus clientes e funcionários! Dessa forma a Trybe abriu meus olhos e me mostrou não só o tipo de profissional que pretendo ser, mas também o tipo de empresa em que pretendo colaborar!</article>
  
@@ -44,7 +44,7 @@
        <li>Soft Skills;</li>
       </ul>
     </section>
-   <aside = id="aside" >"Constantemente a Trybe nos desafia à conversar com outros alunos que não conhecemos sobre temas variados da nossa vida, eu que sou muito tímida, sempre fico nervosa com esses momentos, mas no final acaba sendo muito divertido e especial! Esses momentos me trouxeram muitas rizadas e amizades!"</aside>
+   <aside class="lado-esquerdo" >"Constantemente a Trybe nos desafia à conversar com outros alunos que não conhecemos sobre temas variados da nossa vida, eu que sou muito tímida, sempre fico nervosa com esses momentos, mas no final acaba sendo muito divertido e especial! Esses momentos me trouxeram muitas rizadas e amizades!"</aside>
   </section>
 
   <nav id="linksExternos">
