--- a/index.html
+++ b/index.html
@@ -13,7 +13,20 @@
         </div>
         <div>
             <main>
-                <img id="minha_foto" src="/fotoatual.jpeg" width="200px" alt="Foto da Laila atualmente">
+                <figure>
+                    <img id="minha_foto" src="/fotoatual.jpeg" width="200px" alt="Foto da Laila atualmente">
+                </figure>
+                <section>
+                    <article id="texto_principal">
+                        <h2>Sobre meu aprendizado:</h2>
+                        <p>Atualmente estou cursando desenvolvimento de software web na <a href="https://www.betrybe.com/formacao-desenvolvimento-web" target="_blank">Trybe!</a>. Após dez dias de curso aprendi Unix e Bash, já adquiri prática em HTML e CSS e vou iniciar JavaScript. <br>O curso conta com uma formação completa em desenvolvimento de software web, além de aprender como lidar no mercado de trabalho, através das  softskills. No momento, estou desenvolvendo minhas softskills, dentre elas, a que mais tenho dificuldade é a comunicação, mas acredito que até o final do curso vou ter desenvolvido isso.</p>
+                    </article>
+               
+                    <aside id="subtexto">
+                        <h2>Resumo sobre meu aprendizado:</h2>
+                        <p>Aprendi Unix e Bash, conheci e adquiri prática em Git e GitHub, estou me aprofundando em HTML e CSS, além de começar a desenvolver minhas softskills, como exemplo, empatia.</p>
+                    </aside>
+                </section>
             </main>
         </div>
         <div>
@@ -36,7 +49,7 @@
         <div>
             <nav>
                 <ul id="licoes_a_aprender">
-                    <h2><strong>Lições à aprender</strong></h2>
+                    <h2><strong>Lições à aprender:</strong></h2>
                     <li>JavaScript</li>
                     <li>DOM</li>
                     <li>Forms</li>
@@ -50,22 +63,28 @@
                 </ul>
             </nav>
         </div>
+        <section id="tabela">
+            <table border="1">
+                <h2><strong>Sobre mim:</strong></h2>
+                <tr>
+                    <td>Nome</td>
+                    <td>Idade</td>
+                    <td>Turma</td>
+                    <td>Tribo</td>
+                </tr>
+                <tr>
+                    <td>Laila</td>
+                    <td>22</td>
+                    <td>16</td>
+                    <td>B</td>
+                </tr>
+            </table>
+        </section>
         <div>
             <footer id="rodape">
                 <p>Ecrito por Laila Rodrigues</p>
                 <p>Publicado em 24/08/2021</p>
             </footer>
         </div>
-        <section>
-            <article>
-                <h2>Sobre meu aprendizado:</h2>
-                <p>Atualmente estou cursando desenvolvimento de software web na <a href="https://www.betrybe.com/formacao-desenvolvimento-web" target="_blank">Trybe!</a>. Após dez dias de curso aprendi Unix e Bash, já adquiri prática em HTML e CSS e vou iniciar JavaScript. <br>O curso conta com uma formação completa em desenvolvimento de software web, além de aprender como lidar no mercado de trabalho, através das  softskills. No momento, estou desenvolvendo minhas softskills, dentre elas, a que mais tenho dificuldade é a comunicação, pois sou uma pessoa extremamente tímida, mas até o final do curso espero ter desenvolvido isso.</p>
-            </article>
-       
-            <aside>
-                <h2>Resumo sobre meu aprendizado:</h2>
-                <p>Aprendi Unix e Bash, conheci e adquiri prática em Git e GitHub, estou me aprofundando em HTML e CSS, além de começar a desenvolver minhas softskills, como exemplo, empatia.</p>
-            </aside>
-        </section>
     </body>
 </html>
