Estiliza os titulos de secao, coloca as listas de licoes lado a lado e adiciona margem para cada secao

--- a/index.html
+++ b/index.html
@@ -14,48 +14,50 @@
       <h1 id="titulo">Lições aprendidas na <span class="trybe-green">Trybe</span></h1>
     </header>
     <main>
-      <section id="presentation">
+      <section id="apresentacao" class="secao-caixa">
         <h2>Oi, eu sou o Natã!</h2>
         <img src="me.jpeg" alt="Eu, Natã, com uma blusa azul e uma parede laranja ao fundo" id="minha_foto">
         <nav>
-          <a href="https://linkedin.com/in/nataelienai" target="_blank" class="button">LinkedIn</a>
+          <a href="https://linkedin.com/in/nataelienai" target="_blank" class="botao">LinkedIn</a>
         </nav>
       </section>
-      <section>
-        <h2>Lições</h2>
-        <section>
-          <h3>Lições aprendidas</h3>
-          <ol id="licoes_aprendidas">
-            <li>Unix</li>
-            <li>Shell</li>
-            <li>Git</li>
-            <li>GitHub</li>
-            <li>Internet</li>
-            <li>HTML</li>
-            <li>CSS</li>
-            <li>HTML Semântico</li>
-            <li>Emoções</li>
-            <li>Empatia</li>
-          </ol>
-        </section>
-        <section>
-          <h3>Lições a aprender</h3>
-          <ul id="licoes_a_aprender">
-            <li>JavaScript</li>
-            <li>DOM</li>
-            <li>CSS Responsivo</li>
-            <li>Testes Unitários</li>
-            <li>Jest</li>
-            <li>React</li>
-            <li>Metodologias Ágeis</li>
-            <li>SQL</li>
-            <li>MongoDB</li>
-            <li>Estrutura de Dados</li>
-          </ul>
-        </section>
+      <section class="secao-caixa">
+        <div class="linha"> 
+          <h2 class="secao-titulo">Lições</h2>
+          <section class="lado-esquerdo">
+            <h3>Lições aprendidas</h3>
+            <ol id="licoes_aprendidas">
+              <li>Unix</li>
+              <li>Shell</li>
+              <li>Git</li>
+              <li>GitHub</li>
+              <li>Internet</li>
+              <li>HTML</li>
+              <li>CSS</li>
+              <li>HTML Semântico</li>
+              <li>Emoções</li>
+              <li>Empatia</li>
+            </ol>
+          </section>
+          <section class="lado-direito">
+            <h3>Lições a aprender</h3>
+            <ul id="licoes_a_aprender">
+              <li>JavaScript</li>
+              <li>DOM</li>
+              <li>CSS Responsivo</li>
+              <li>Testes Unitários</li>
+              <li>Jest</li>
+              <li>React</li>
+              <li>Metodologias Ágeis</li>
+              <li>SQL</li>
+              <li>MongoDB</li>
+              <li>Estrutura de Dados</li>
+            </ul>
+          </section>
+        </div>
       </section>
-      <section>
-        <h2>Situação atual no módulo de Fundamentos</h2>
+      <section class="secao-caixa">
+        <h2 class="secao-titulo">Situação atual no módulo de Fundamentos</h2>
         <table>
           <thead>
             <tr>
@@ -107,15 +109,15 @@
           </tbody>
         </table>
       </section>
-      <div class="linha">
+      <div class="secao-caixa linha">
         <section class="lado-esquerdo">
-          <h2>Meu aprendizado</h2>
+          <h2 class="secao-titulo">Meu aprendizado</h2>
           <article>
             <p>Até então, escolher entrar na Trybe foi uma das melhores decisões que tive no último mês. Desde que ingressei, reaprendi muitos dos conhecimentos técnicos que já havia aprendido na faculdade, como HTML, CSS e protocolos de rede, mas de uma forma muito mais dinâmica e convidativa. Além disso, mesmo com esse pouco tempo, também aprendi a dar o devido valor às soft skills e como essas habilidades socioemocionais afetam o nosso dia a dia.</p>
           </article>
         </section>
         <aside class="lado-direito">
-          <h2>Um breve resumo</h2>
+          <h2 class="secao-titulo">Um breve resumo</h2>
           <p>Iniciei na Trybe aprendendo sobre o sistema operacional Unix e o Bash, um dos shells mais populares. Depois, passei por Git e GitHub, aprendendo sobre os seus comandos e suas funcionalides essenciais, chegando até o bloco atual sobre HTML e CSS.</p>
         </aside>
       </div>
