Menu added + style updated

--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
     <body>
         <header id="cabecalho">
             <h1 id="titulo">Lições aprendidas na trybe</h1>
-            <nav >
-                <ul id="menu">
+            <nav>
+                <ul class="menu">
                     <li id="inicio"><a href="#inicio"> Início</a></li>
                     <li id="sobre"><a href="#sobre"> Sobre</a></li>
                     <li id="contato"><a href="#contato"> Contato</a></li>
@@ -51,7 +51,7 @@
 
         
             <div class="div-2">  
-                <h2>Licões a aprender </h2>
+                <h2 class="licao-a-aprender">Licões a aprender </h2>
                 <ul id="licoes_a_aprender">
                     <li>Java Script</li>
                     <li>Lógica de programação</li>
