--- a/index.html
+++ b/index.html
@@ -48,7 +48,9 @@
   </section>
 
   <nav id="linksExternos">
-    Contato:<a href="https://www.linkedin.com/in/amandasottani/"target = "_blark"> linkedin.com/amandasottani</a><br>Interessado na Trybe? <a href="https://www.betrybe.com/"target = "_blark">Clique aqui</a>
+    Contato: <a href = "https://www.linkedin.com/in/amandasottani/" target = "_blark"> linkedin.com/amandasottani</a>
+    | Interessado na Trybe? <a href="https://www.betrybe.com/"target = "_blark"> Clique aqui</a><br>
+    <a href="#minha_foto" target="_blark"> Inicio </a>
   </nav>
   <footer id="rodape">
     <p>2021|Todos os direitos reservado à Amanda Sottani Nascimento 
