--- a/index.html
+++ b/index.html
@@ -21,40 +21,38 @@
           <a href="https://linkedin.com/in/nataelienai" target="_blank" class="botao">LinkedIn</a>
         </nav>
       </section>
-      <section class="secao-caixa">
-        <div class="linha"> 
-          <h2 class="secao-titulo">Lições</h2>
-          <section class="lado-esquerdo">
-            <h3>Lições aprendidas</h3>
-            <ol id="licoes_aprendidas">
-              <li>Unix</li>
-              <li>Shell</li>
-              <li>Git</li>
-              <li>GitHub</li>
-              <li>Internet</li>
-              <li>HTML</li>
-              <li>CSS</li>
-              <li>HTML Semântico</li>
-              <li>Emoções</li>
-              <li>Empatia</li>
-            </ol>
-          </section>
-          <section class="lado-direito">
-            <h3>Lições a aprender</h3>
-            <ul id="licoes_a_aprender">
-              <li>JavaScript</li>
-              <li>DOM</li>
-              <li>CSS Responsivo</li>
-              <li>Testes Unitários</li>
-              <li>Jest</li>
-              <li>React</li>
-              <li>Metodologias Ágeis</li>
-              <li>SQL</li>
-              <li>MongoDB</li>
-              <li>Estrutura de Dados</li>
-            </ul>
-          </section>
-        </div>
+      <section id="licoes" class="secao-caixa linha">
+        <h2 class="secao-titulo">Lições</h2>
+        <section class="lado-esquerdo">
+          <h3>Lições aprendidas</h3>
+          <ol id="licoes_aprendidas">
+            <li>Unix</li>
+            <li>Shell</li>
+            <li>Git</li>
+            <li>GitHub</li>
+            <li>Internet</li>
+            <li>HTML</li>
+            <li>CSS</li>
+            <li>HTML Semântico</li>
+            <li>Emoções</li>
+            <li>Empatia</li>
+          </ol>
+        </section>
+        <section class="lado-direito">
+          <h3>Lições a aprender</h3>
+          <ul id="licoes_a_aprender">
+            <li>JavaScript</li>
+            <li>DOM</li>
+            <li>CSS Responsivo</li>
+            <li>Testes Unitários</li>
+            <li>Jest</li>
+            <li>React</li>
+            <li>Metodologias Ágeis</li>
+            <li>SQL</li>
+            <li>MongoDB</li>
+            <li>Estrutura de Dados</li>
+          </ul>
+        </section>
       </section>
       <section class="secao-caixa">
         <h2 class="secao-titulo">Situação atual no módulo de Fundamentos</h2>
