Finaliza tabela e ajusta nav

--- a/index.html
+++ b/index.html
@@ -28,9 +28,9 @@
         />
    
 
-    <article id="artigo">
+    <article id="article">
             <section>
-            <h2>Lorem ipsum</h2>
+            <h2>Sobre mim</h2>
             <br>
             <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. <br>
             Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. <br>
@@ -72,7 +72,8 @@
             <li>Comunicação</li>
         </ul>
     </section>
-</article>
+
+    </article>
     <article>
         <aside>
             <h3>Lorem ipsum</h2>
@@ -81,11 +82,40 @@
             Aenean massa. Cum sociis natoque penatibus et magnis dis.</p>
         </aside>
     </article>
+
+    <article>
+    <section class="weeks">
+        <table class="center">
+            <thead>
+                <caption>
+                    Semanas Estudando Na Trybe
+                </caption>
+                <tr>
+                    <th id="week-1">Semana 1</th>
+                    <th id="week-2">Semana 2</th>
+                    <th id="week-3">Semana 3</th>
+                    <th id="week-4">Semana 4</th>
+                    <th id="week-5">Semana 5</th>
+                </tr>
+                <tbody>
+                <tr>
+                    <td headers="week-1">✓</td>
+                    <td headers="week-2">✓</td>
+                    <td headers="week-3">✓</td>
+                    <td headers="week-4">✕</td>
+                    <td headers="week-5">✕</td>
+                </tbody> 
+                </tr>
+            </thead>
+        </table>
+    </section>
+    </article>
+
     </main>
 
+    <footer id="rodape">
+        <p id="footer-text" style="font-family: 'Courier New', Courier, monospace; font-size: 11px">© marllon | 2021</p>
+    </footer>
 
-        <footer id="rodape">
-            <p id="footer-text" style="font-family: 'Courier New', Courier, monospace; font-size: 11px">© marllon | 2021</p>
-        </footer>
     </body>
 </html>
