--- a/index.html
+++ b/index.html
@@ -21,13 +21,15 @@
     </header>
     
     <main>
+        <figure>
         <img id="minha_foto" 
         src="https://scontent.fsdu25-1.fna.fbcdn.net/v/t1.6435-1/p200x200/127700541_3574619105938511_6430599194567254385_n.jpg?_nc_cat=109&ccb=1-5&_nc_sid=7206a8&_nc_eui2=AeGiNWbdrgbzK1cbBQX8c5aRZyF2irBH6HlnIXaKsEfoeRyUREMVOqJrFmx785VoW86Jb-WIn69cXB63gy3QbLmt&_nc_ohc=fB9LJRHyQLQAX-byMEq&tn=qou3SiMQKNVSO0n7&_nc_ht=scontent.fsdu25-1.fna&oh=2e688aec3a27857f18512af9d826a71e&oe=614B80DF" 
         alt="Minha foto"
         width="200px"
         />
+        </figure>
    
-
+    <section class="blocos">
     <article>
             <h2>Lorem ipsum</h2>
             <br>
@@ -36,8 +38,9 @@
                 <br>Nulla consequat massa quis enim. Donec pede justo, fringilla vel, aliquet nec, vulputate eget, arcu.
                 <br>In enim justo, rhoncus ut, imperdiet a, venenatis vitae, justo. Nullam dictum felis eu pede mollis pretium.
     </article>
+    </section>
 
-    <article>
+    <article class="blocos">
     <section class="lado-esquerdo">
         <ol id="licoes_aprendidas">
             <h2>Lições Aprendidas</h2>
@@ -73,7 +76,7 @@
     </section>
 
     </article>
-    <article>
+    <article class="blocos">
         <aside>
             <h3>Lorem ipsum</h2>
             <br>
@@ -82,9 +85,9 @@
         </aside>
     </article>
 
-    <article>
+    <article class="blocos">
     <section class="weeks">
-        <table class="center">
+        <table>
             <thead>
                 <caption>
                     Semanas Estudando Na Trybe
