--- a/index.html
+++ b/index.html
@@ -1,68 +1,24 @@
 <!DOCTYPE html>
 <html>
     <head>
+        <title>lessons learned</title>
         <meta charset="utf-8">
-        <link rel="stylesheet" href="style.css";>
-        <title> primeiro projeto</title>
+        <link rel="stylesheet" href="style.css"
+        
 
 
 
     </head>
+
     <body>
-        <header id="cabecalho">
-            <h1 id="titulo"> <h1>  Lições aprendidas </h1> 
-            <div id="minha_foto"><img src="eu.jpg" width="100px"> </div>
-            <nav> <a href=""> |Home </a>
-                <a href="">   |Saiba Mais </a>
-                <a href="">    |Contato </a>
-                </nav>
+        <div id="cabecalho">
+        <h1 id="titulo">Lições aprendidas</h1>
 
-        </header>   
-        <div id= "licoes_aprendidas">
-            <h2>Lições aprendidas</h2>
-            <ol >
-                <li> aprendi a organizar melhor meu tempo</li>
-                <li> aprendi a ser mais paciente</li>
-                <li> aprendi a aprender com outras pessoas</li>
-                <li> aprendi que tudo pode sempre melhorar </li>
-                <li> aprendi a aproveitar melhor as horas vagas</li>
-                <li> aprendi a aprender melhor </li>
-                <li> aprendi a </li>
-                <li> aprendi a</li>
-                <li> aprendi a</li>
-                <li> aprendi a </li>
-            </ol>
-            
         </div>
-        <div id="licoes_a_aprender">
-            <h2> lições a aprender</h2>
-            <ul >
-                <li></li>
-                <li></li>
-                <li></li>
-                <li></li>
-                <li></li>
-                <li></li>
-                <li></li>
-                <li></li>
-                <li></li>
-                <li></li>
-            </ul>
-        </div> 
-        <article> 
 
-        </article>
-        <aside>
-
-        </aside>
-
-        <footer id="rodape">
-
-
-        </footer>    
     </body>
 
 
 
 
-    </html>
+</html>
