--- a/index.html
+++ b/index.html
@@ -16,6 +16,45 @@
 
         </div>
 
+        <div> <img src="https://www.imagemhost.com.br/images/2021/08/29/eu.jpg" id="minha_foto">  </div>
+
+        <div>
+            <h1>Lições aprendidas</h1>
+            <ol id="licoes_aprendidasS">
+                       
+                <li> orem ipsum dolor sit amet, consectetur </li>
+                <li>orem ipsum dolor sit amet, consectetur </li>
+                <li>orem ipsum dolor sit amet, consectetur </li>
+                <li>orem ipsum dolor sit amet, consectetur </li>
+                <li>orem ipsum dolor sit amet, consectetur </li>
+                <li>orem ipsum dolor sit amet, consectetur </li>
+                <li>orem ipsum dolor sit amet, consectetur </li>
+                <li>orem ipsum dolor sit amet, consectetur </li>
+                <li>orem ipsum dolor sit amet, consectetur </li>
+                <li>orem ipsum dolor sit amet, consectetur </li>
+            </ol>
+        </div>
+
+        <div>
+            <l2>Lições a aprender</l2>
+            <ul id="licoes_a_aprender">
+                <li>vitae orci id, tristique sagittis quam.</li>
+                <li>vitae orci id, tristique sagittis quam.</li>
+                <li>vitae orci id, tristique sagittis quam.</li>
+                <li>vitae orci id, tristique sagittis quam.</li>
+                <li>vitae orci id, tristique sagittis quam.</li>
+                <li>vitae orci id, tristique sagittis quam.</li>
+                <li>vitae orci id, tristique sagittis quam.</li>
+                <li>vitae orci id, tristique sagittis quam.</li>
+                <li>vitae orci id, tristique sagittis quam.</li>
+                <li>vitae orci id, tristique sagittis quam.</li>
+                
+
+            </ul>
+        </div>
+
+
+
     </body>
 
 
