--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 
         </div>
 
-        <div> <img src="https://www.imagemhost.com.br/images/2021/08/29/eu.jpg" id="minha_foto">  </div>
+        <div> <img src="https://www.imagemhost.com.br/images/2021/08/29/eu.jpg" alt="estudande trybe" id="minha_foto">  </div>
 
         <div>
             <h1>Lições aprendidas</h1>
@@ -47,11 +47,12 @@
                 <li>vitae orci id, tristique sagittis quam.</li>
                 <li>vitae orci id, tristique sagittis quam.</li>
                 <li>vitae orci id, tristique sagittis quam.</li>
-                <li>vitae orci id, tristique sagittis quam.</li>
-                
+                <li>vitae orci id, tristique sagittis quam.</li>                
 
             </ul>
         </div>
+
+
 
 
 
