--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 
         <div>
             <h1>Lições aprendidas</h1>
-            <ol id="licoes_aprendidasS">
+            <ol id="licoes_aprendidas">
                        
                 <li> orem ipsum dolor sit amet, consectetur </li>
                 <li>orem ipsum dolor sit amet, consectetur </li>
@@ -51,10 +51,7 @@
 
             </ul>
         </div>
-
-
-
-
+        
 
     </body>
 
