--- a/index.html
+++ b/index.html
@@ -67,6 +67,10 @@
             Curabitur gravida enim a libero he
         </aside>
 
+        <table>
+            <Td> <img src="estudar.jpeg" alt="mesa com meios para estudar"> </Td>
+        </table>
+
         <footer id="rodape" >
             Para saber mais acesse:<br> <nav> <a href="https://www.betrybe.com/" target ="_blank" > venha aprender 
             a programar  </a> </nav>
