--- a/index.html
+++ b/index.html
@@ -3,11 +3,8 @@
     <head>
         <title>lessons learned</title>
         <meta charset="utf-8">
-        <link rel="stylesheet" href="style.css"
+        <link rel="stylesheet" href="style.css">
         
-
-
-
     </head>
 
     <body>
@@ -68,7 +65,7 @@
         </aside>
 
         <table>
-            <Td> <img src="estudar.jpeg" alt="mesa com meios para estudar"> </Td>
+            <Td> <img src="estudar.jpeg" alt="mesa com meios para estudo"> </Td>
         </table>
 
         <footer id="rodape" >
