Ajustes nas cores, padding e cabeçalho.

--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 
 <head>
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Lessons Learned by Nayara</title>
     <link rel="stylesheet" href="style.css">
 </head>
@@ -13,7 +14,7 @@
     </header>
     <main>
         <section class="menu">
-            <img src="profile-picture.jpeg" alt="Nayara sorrindo discretamente." id="minha_foto" width="250px"> 
+            <img src="profile-picture.jpeg" alt="Nayara sorrindo discretamente." id="minha_foto" width="200px"> 
             <h2>Nayara Vasconcelos</h2>
             <p>Pessoa estudante na Trybe</p>
             <nav>
@@ -22,6 +23,9 @@
                 <a href="https://github.com/tryber" target="_blank">Tryber</a>
         </nav>
         </section>
+        <aside>
+            <p>Na Trybe estou aprendendo não apenas habilidades técnicas, como também estou aprendendo habilidades comportamentais.</p>
+        </aside>
         <article>
             <h2>Primeros 15 dias na Trybe</h2>
             <p>As duas primeiras semanas de estudo na <a href="http://www.betrybe.com" target="_blank">Trybe</a> foram muito intensas: Bastante informação nova, muitos exercícios práticos, desafios e realizações. A Tribo B da Turma 16 é super proativa e colaborativa e a equipe de facilitação é maravilhosa. Só gente bacana!</p>
@@ -57,9 +61,6 @@
                 <li>Estrutura de Dados</li>
             </ul>
         </section>
-        <aside>
-            <p>Na Trybe estou aprendendo não apenas habilidades técnicas, como também estou aprendendo habilidades comportamentais.</p>
-        </aside>
     </main>
     <footer class="rodape" id="rodape">
         <p>Projeto #1</p>
