Altera secoes de aprendizado

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
     </ul>
   </nav>
   <div class="content">
-    <section class="learn-section">
+    <section class="learned-section">
       <h2>Lições Aprendidas</h2>
       <ol id="licoes_aprendidas">
         <li>Conhecer sistemas baseados em Unix</li>
@@ -47,7 +47,7 @@
     <img id="minha_foto"
       src="https://media-exp1.licdn.com/dms/image/C4D03AQGNzMBMSt9ARQ/profile-displayphoto-shrink_800_800/0/1628638444292?e=1635379200&v=beta&t=ppkX48-iCDbSTrt333QTNw3CuyHcgXSi_iFDUWnOFJU"
       alt="Jovem preta com cabelo cacheado solto vista de frente">
-    <section class="learn-section">
+    <section class="to-learn-section">
       <h2>Lições a Aprender</h2>
       <ul id="licoes_a_aprender">
         <li>Desenvolver códigos em JavaScript</li>
