--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <html> 
     <head>
         <meta charset="UTF-8"
-        <link  rel="stylesheet" href="style.css">
+        <link  rel="stylesheet" href="style.css" type="text/css" >
     </head>
     <body>
         <div>
